--- a/ConstraintSatisfactionProblem/ConstraintSatisfactionProblem.vcxproj
+++ b/ConstraintSatisfactionProblem/ConstraintSatisfactionProblem.vcxproj
@@ -147,12 +147,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Backtracking.h" />
+    <ClInclude Include="ForwardChecking.h" />
     <ClInclude Include="NQueen.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Backtracking.cpp" />
     <ClCompile Include="ConstraintSatisfactionProblem.cpp" />
+    <ClCompile Include="ForwardChecking.cpp" />
     <ClCompile Include="NQueen.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -160,6 +165,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ConstraintSatisfactionProblem.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
